# masm-lsp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DIAGNOSTICS.md  IMPROVED_STACK_TRACKING.md  IMPROVEMENTS.md  LICENSE  README.md  REFACTORING_PLAN.md  build.rs
.claude/: settings.local.json
benches/: decompilation.rs
crates/masm-analysis/: Cargo.toml  README.md
crates/masm-analysis/src/: descriptions.rs  diagnostics.rs  instruction_docs.rs  lib.rs  prepared.rs  stack_effect.rs
crates/masm-analysis/src/abstract_interp/: mod.rs
crates/masm-analysis/src/analysis/: abstract_interpretation.rs  analyzer.rs  call_graph.rs  checker.rs  dispatcher.rs  mod.rs  semantics.rs  while_loops.rs
crates/masm-analysis/src/analysis/checkers/: merkle_depth.rs
crates/masm-analysis/src/analysis/contracts/: inference.rs  mod.rs  signature.rs
crates/masm-analysis/src/analysis/locals/analyzer/: analyzer_impl.rs  tests.rs
crates/masm-analysis/src/analysis/stack_effects/: mod.rs  tests.rs
crates/masm-analysis/src/analysis/types/: symbolic_stack.rs  taint.rs
crates/masm-analysis/src/unconstrained_advice/: address.rs  domain.rs  grouping.rs  inter.rs  merkle.rs  mod.rs  nonzero.rs  provenance.rs  shared.rs  summary.rs  tests.rs  u32.rs  u32_domain.rs  walker.rs
crates/masm-analysis/src/unconstrained_advice/tests/: corpus.rs  mod.rs  stdlib_eval.rs
crates/masm-analysis/src/uninitialized_locals/: domain.rs  inter.rs  mod.rs  state.rs  summary.rs  tests.rs  transfer.rs
crates/masm-decompiler/: Cargo.toml  README.md
crates/masm-decompiler/src/: lib.rs  mod.rs  range.rs
crates/masm-decompiler/src/collector/: api.rs  mod.rs  pseudocode_collector.rs  tests.rs  types.rs
crates/masm-decompiler/src/collector/handlers/: advice.rs  arithmetic.rs  calls.rs  crypto.rs  memory.rs  misc.rs  stack.rs
crates/masm-decompiler/src/ssa/: context.rs  helpers.rs  pseudocode.rs  signature.rs  state.rs  tests.rs
crates/masm-instructions/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/masm-instructions/data/: instruction_reference.toml  instructions.toml
crates/masm-instructions/docs/: code_organization.md  cryptographic_operations.md  debugging.md  execution_contexts.md  field_operations.md  flow_control.md  instruction_reference.md
crates/masm-instructions/scripts/: convert_instruction_reference.py
crates/masm-instructions/src/: instruction_type.rs  lib.rs  semantics.rs
crates/masm-lint/: Cargo.toml
crates/masm-lint/src/: main.rs  render.rs
crates/masm-lint/src/snapshots/: masm_lint__render__tests__render_advice_with_related_spans.snap  masm_lint__render__tests__render_local_init_diagnostic.snap  masm_lint__render__tests__render_memory_address_diagnostic.snap  masm_lint__render__tests__render_merkle_root_diagnostic.snap  masm_lint__render__tests__render_multi_digit_line_number.snap  masm_lint__render__tests__render_signature_mismatch.snap  masm_lint__render__tests__render_type_diagnostic.snap  masm_lint__render__tests__render_unknown_span.snap
crates/masm-lint/tests/: lint_test.rs
data/: instructions.toml  semantics_overrides.toml
docs/: CONTRACT_INFERENCE.md  DIAGNOSTICS.md  code_organization.md  cryptographic_operations.md  events.md  execution_contexts.md  index.md  io_operations.md  stack_manipulation.md  u32_operations.md
examples/core/: mem.masm  word.masm
examples/core/collections/: mmr.masm  smt.masm  sorted_array.masm
examples/core/crypto/: aead.masm
examples/core/math/: u128.masm  u256.masm  u64.masm
examples/core/stark/: constants.masm  deep_queries.masm  mod.masm  ood_frames.masm  public_inputs.masm  random_coin.masm  utils.masm  verifier.masm
examples/debug/: debug.masm
examples/hashing/blake3_1to1/: blake3_1to1.masm
examples/hashing/blake3_2to1/: blake3_2to1.masm
examples/hashing/sha256/: sha256.masm
examples/hashing/unhashing/: unhashing.masm
examples/nprime/: nprime.masm
examples/stdlib/: add_loop.masm  mem.masm  word.masm
examples/stdlib/collections/: mmr.masm  smt.masm  sorted_array.masm
examples/stdlib/crypto/: elgamal_ecgfp5.masm
examples/stdlib/math/: u256.masm  u64.masm
examples/stdlib/stark/: constants.masm  deep_queries.masm  mod.masm  ood_frames.masm  public_inputs.masm  random_coin.masm  utils.masm  verifier.masm
examples/stdlib/sys/: mod.masm
src/: client.rs  code_lens.rs  core_lib.rs  cursor_resolution.rs  decompiler.rs  descriptions.rs  diagnostics.rs  disassembler.rs  index.rs  inlay_hints.rs  instruction_docs.rs  instruction_hints.rs  lib.rs  main.rs  module_path.rs  resolution.rs  server.rs  service.rs  stack_effect.rs  symbol_path.rs  symbol_resolution.rs  util.rs
src/analysis/: abstract_interp.rs  abstract_interpretation.rs  analyzer.rs  call_effect.rs  call_graph.rs  checker.rs  contracts.rs  dispatcher.rs  instruction_effects.rs  mod.rs  semantics.rs  stack_effects.rs  stack_ops.rs  static_effect.rs  types.rs  utils.rs  while_loops.rs
src/analysis/checkers/: merkle_depth.rs  mod.rs  procedure_call.rs  u32_validation.rs
src/analysis/contracts/: inference.rs  mod.rs  store.rs  types.rs
src/analysis/locals/: analyzer.rs  mod.rs  state.rs
src/analysis/stack_effects/: mod.rs  tests.rs
src/analysis/types/: analysis_state.rs  bounds.rs  mod.rs  stack.rs  state.rs  taint.rs  (+1 more)
src/decompiler/: collector.rs  mod.rs  pseudocode.rs  ssa.rs  state.rs
src/dmasm/: mod.rs  parser.rs  services.rs
src/masm/: code_lens.rs  cursor_resolution.rs  diagnostics.rs  index.rs  inlay_hints.rs  mod.rs  module_path.rs
src/server/: backend.rs  cache.rs  config.rs  helpers.rs  lsp.rs  mod.rs  tests.rs  tracked_workspace.rs
tests/: concurrent_test.rs  core_lib_test.rs  decompilation_analysis.rs  decompilation_loops.rs  diagnostics_test.rs  dmasm_rename.rs  ecgfp5_base_field_probe.rs  examples_test.rs  goto.rs  hover_test.rs  loop_indexing_analysis.rs  resolution_test.rs  stdlib_test.rs
tests/common/: fixtures.rs  harness.rs  mod.rs
tests/fixtures/: module_with_aliases.masm  multi_proc.masm  multi_var.dmasm  nested_blocks.masm  nested_blocks_invalid.masm  simple.dmasm  syntax_error.masm  unresolved_ref.masm
(+57 files in other folders)
