[workspace]
members = [".", "crates/masm-instructions"]
resolver = "2"

[package]
name = "masm-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
phf = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
miden-utils-diagnostics = { version = "0.20", default-features = true }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
masm-decompiler = { path = "../masm-decompiler" }
masm-instructions = { path = "crates/masm-instructions" }

# Miden toolchain
miden-assembly-syntax = { version = "0.20", default-features = true }
miden-debug-types = { version = "0.20", default-features = true }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1", features = ["time"] }
criterion = { version = "0.5", features = ["async_tokio"] }
