[workspace]
members = [".", "crates/masm-instructions", "crates/masm-analysis", "crates/masm-lint"]
resolver = "2"

[workspace.dependencies]
masm-decompiler = { version = "=0.8.1", git = "https://github.com/huitseeker/masm-decompiler", rev = "1aa3918cb4ddfad03f44e13d75b4b41f1ed88ede" }
miden-assembly-syntax = { version = "=0.23.0", git = "https://github.com/0xMiden/miden-vm", rev = "c711256c7b8154a31c7955c0c01bb063da095c2b", default-features = true }
miden-debug-types = { version = "=0.23.0", git = "https://github.com/0xMiden/miden-vm", rev = "c711256c7b8154a31c7955c0c01bb063da095c2b", default-features = true }
miden-utils-diagnostics = { version = "=0.23.0", git = "https://github.com/0xMiden/miden-vm", rev = "c711256c7b8154a31c7955c0c01bb063da095c2b", default-features = true }
yansi = "1.0"
log = "0.4"

[package]
name = "masm-lsp"
version = "0.8.0"
authors = ["Trail of Bits"]
homepage = "https://trailofbits.com"
repository = "https://github.com/trailofbits/masm-decompiler"
edition = "2024"

[dependencies]
async-trait = "0.1"
phf = "0.13"
thiserror = "2.0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
miden-utils-diagnostics = { workspace = true }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
masm-decompiler = { workspace = true }
masm-analysis = { path = "crates/masm-analysis" }
masm-instructions = { path = "crates/masm-instructions" }

# Miden toolchain
miden-assembly-syntax = { workspace = true }
miden-debug-types = { workspace = true }

[dev-dependencies]
proptest = "1.10"
tokio = { version = "1", features = ["time"] }
criterion = { version = "0.8", features = ["async_tokio"] }
