[package]
name = "masm-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
masm-instructions = { path = "../masm-instructions" }
miden-assembly-syntax = { git = "https://github.com/0xMiden/miden-vm", package = "miden-assembly-syntax", default-features = true }
miden-debug-types = { git = "https://github.com/0xMiden/miden-vm", package = "miden-debug-types", default-features = true }
thiserror = "1.0"
tower-lsp = "0.20"

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1", features = ["time"] }
criterion = { version = "0.5", features = ["async_tokio"] }
