[package]
name = "masm-lint"
version = "0.4.1"
authors = ["Trail of Bits"]
homepage = "https://trailofbits.com"
edition = "2021"

[dependencies]
masm-analysis = { path = "../masm-analysis" }
masm-decompiler = { workspace = true }
miden-debug-types = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
yansi = { workspace = true }

[dev-dependencies]
insta = "1.42"
